<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:fitsSystemWindows="true"
    android:layout_marginTop="@dimen/dp_40"
    android:layout_marginBottom="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        style="@style/NavigationHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/place_holder"
        android:text="@string/navigation_header_text_vip" />

    <TextView
        style="@style/NavigationHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/place_holder"
        android:text="@string/navigation_header_text_personalise" />

    <TextView
        style="@style/NavigationHeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/place_holder"
        android:text="@string/navigation_header_text_message" />

</LinearLayout>
