<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:descendantFocusability="beforeDescendants"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.zhouwei.mzbanner.MZBannerView
                android:id="@+id/bannerView"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                app:canLoop="true"
                app:indicatorAlign="center"
                app:middle_page_cover="true"
                app:open_mz_mode="false" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:columnCount="3"
                android:focusedByDefault="true"
                android:rowCount="2">

                <LinearLayout
                    android:id="@+id/hall_singer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_4">

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/music_hall_singer" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/singer" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hall_ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_4">

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/music_hall_rank" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/rank" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hall_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_4">

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/music_hall_radio" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/radio" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hall_songList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"

                    android:orientation="horizontal"
                    android:padding="@dimen/dp_4">

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:padding="@dimen/dp_2"
                        android:src="@drawable/music_hall_list" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/list" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hall_mv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_row="1"

                    android:layout_rowWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_4">

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/music_hall_video" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mv" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hall_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/dp_4"
                    android:layout_row="1"
                    android:layout_rowWeight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_4">

                    <ImageView
                        android:layout_width="@dimen/dp_30"
                        android:layout_height="@dimen/dp_30"
                        android:src="@drawable/music_hall_album" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/album" />

                </LinearLayout>

            </GridLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/music_hall_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="2000dp"
                android:nestedScrollingEnabled="false"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
